refactor : security config 수정